[gd_scene load_steps=8 format=3 uid="uid://ccdcruw7mockq"]

[ext_resource type="Theme" uid="uid://dj3kv5o4ggit" path="res://Resources/MenuTheme.res" id="1_emt5w"]
[ext_resource type="Texture2D" uid="uid://le45t6vap2xc" path="res://Assets/Materials/Textures/icon.svg" id="1_k0fv6"]
[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_na64g"]
[ext_resource type="PackedScene" uid="uid://bo2fcaed2jk31" path="res://Szenen/OptionsMenu.tscn" id="3_54e1v"]
[ext_resource type="Texture2D" uid="uid://cuucbbs2ribtd" path="res://Assets/Materials/Textures/twirl_01.png" id="5_18okb"]
[ext_resource type="Script" path="res://Scripts/rotate.gd" id="6_fikis"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_1k1ql"]
blend_mode = 1

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_emt5w")
script = ExtResource("1_na64g")

[node name="OptionsMenu" parent="." instance=ExtResource("3_54e1v")]
visible = false
layout_mode = 1

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 2
offset_left = 896.0
offset_top = 482.0
offset_right = 1024.0
offset_bottom = 610.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
texture = ExtResource("1_k0fv6")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Spiel starten"
metadata/_edit_use_anchors_ = true

[node name="OptionsButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Optionen"
metadata/_edit_use_anchors_ = true

[node name="ExitButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Spiel beenden"
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 20
step = 0.0

[node name="Swirl" type="TextureRect" parent="."]
visible = false
material = SubResource("CanvasItemMaterial_1k1ql")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.816667
anchor_top = 0.680556
anchor_right = 0.878529
anchor_bottom = 0.790533
offset_top = -6.10352e-05
offset_right = 393.224
offset_bottom = 393.224
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.231984, 0.231984)
pivot_offset = Vector2(266.724, 260.195)
texture = ExtResource("5_18okb")
script = ExtResource("6_fikis")
speed = -15.0
metadata/_edit_use_anchors_ = true

[connection signal="done" from="OptionsMenu" to="." method="_on_options_menu_done"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
